<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.5.2</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>ru.bangerok.enterprise</groupId>
    <artifactId>ninja-configuration</artifactId>
    <version>1.0.1</version>
    <packaging>pom</packaging>
    <name>Ninja Configuration</name>
    <description>Configuration service on "Spring Cloud"</description>
    <url>https://github.com/NinjaEnterprise/NinjaConfiguration</url>

    <organization>
        <name>Vladislav Kuznetsov</name>
        <url>https://vk.com/vladislav_kuznetsov</url>
    </organization>

    <developers>
        <developer>
            <id>bangerok</id>
            <name>Vladislav Kuznetsov</name>
            <email>kuznetsov.v.a.work@gmail.com</email>
            <timezone>+3</timezone>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <profiles>
        <profile>
            <id>all</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <modules>
                <module>configuration-api</module>
                <module>configuration-client</module>
                <module>configuration-jdbc</module>
                <module>configuration-rest</module>
                <module>configuration-server</module>
            </modules>
        </profile>
    </profiles>

    <properties>
        <!-- Ninja Modules -->
        <ninja.modules.version>1.0.1</ninja.modules.version>

        <!-- Compiler -->
        <java.version>16</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Dependencies -->
        <spring-cloud.version>2020.0.3</spring-cloud.version>
        <lombok.version>1.18.20</lombok.version>

        <!-- Plugins -->
        <checkstyle-plugin.version>3.1.2</checkstyle-plugin.version>
        <puppycrawl.checkstyle.version>8.43</puppycrawl.checkstyle.version>
        <mapstruct.version>1.4.2.Final</mapstruct.version>
        <lombok-mapstruct.version>0.1.0</lombok-mapstruct.version>
        <spring-boot.version>2.5.2</spring-boot.version>
        <maven-compiler.version>3.8.1</maven-compiler.version>

        <!-- Sonar Cloud -->
        <sonar.projectKey>NinjaEnterprise_NinjaConfiguration</sonar.projectKey>
        <sonar.moduleKey>${project.artifactId}</sonar.moduleKey>
        <sonar.organization>ninja-enterprise</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.sources>src/main/java</sonar.sources>
        <sonar.java.binaries>target/classes</sonar.java.binaries>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Cloud: dependencies -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Mapstruct -->
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>

            <!-- Ninja modules -->
            <dependency>
                <groupId>ru.bangerok.enterprise</groupId>
                <artifactId>configuration-api</artifactId>
                <version>${ninja.modules.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.bangerok.enterprise</groupId>
                <artifactId>configuration-client</artifactId>
                <version>${ninja.modules.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.bangerok.enterprise</groupId>
                <artifactId>configuration-jdbc</artifactId>
                <version>${ninja.modules.version}</version>
            </dependency>

            <dependency>
                <groupId>ru.bangerok.enterprise</groupId>
                <artifactId>configuration-rest</artifactId>
                <version>${ninja.modules.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${puppycrawl.checkstyle.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>./google-check-style.xml</configLocation>
                    <violationSeverity>warning</violationSeverity>
                    <consoleOutput>true</consoleOutput>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                </configuration>
                <executions>
                    <execution>
                        <id>validate</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>${lombok-mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <compilerArg>
                                -Amapstruct.defaultComponentModel=spring
                            </compilerArg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>